# poetry_practice

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  hoge.txt  openapi.json  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: main.py  test_main.py
docker/: Dockerfile
docker/app/: Dockerfile
functions/: startup.py
functions/get/: main.py
mysql/conf.d/: my.cnf
tests/get/: test_main.py
