[tool.poetry]
name = "poetry_practice"
version = "0.1.0"
description = ""
authors = ["chocobaby727 <chocobabion1152@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.85.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
flake8 = "^5.0.4"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# mypy設定
# https://mypy.readthedocs.io/en/stable/config_file.html?highlight=mypy.ini
[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unreachable = true
warn_return_any = true
ignore_missing_imports = true
